<resources>
    <string name="app_name">Manta</string>
    <string name="pick_athlete"><i>Wyszukaj zawodnika</i></string>
    <string name="athlete">Zawodnik</string>
    <string name="next">Dalej</string>
    <string name="competition">Zawody</string>
    <string name="articles">Artykuły</string>
    <string name="achievements">Osiągnięcia</string>
    <string name="profile">Profil</string>
    <string name="incoming_meets">Najbliższe zawody</string>
    <string name="performed_meets">Odbyte zawody</string>
    <string name="athlete_medals_statistics">Dorobek pływacki</string>
    <string name="athlete_information">Informacje o pływaku</string>
    <string name="licence_no">Numer licencji: %1$s</string>
    <string name="licence_number">Numer licencji</string>
    <string name="birth_date">Data urodzenia</string>
    <string name="train_from">Trenuje od</string>
    <string name="train_from_m">Trenował od</string>
    <string name="train_from_f">Trenowała od</string>
    <string name="train_to_m">Trenował do</string>
    <string name="train_to_f">Trenowała do</string>
    <string name="no_data">Brak danych</string>
    <string name="no_athlete_statistics">Brak trofeów</string>
    <string name="no_mvr">Brak \n najwartościowszych \n wyników</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="dashboard">Aktualności</string>
    <string name="mvr_25">Najlepszy wynik na basenie 25m</string>
    <string name="mvr_50">Najlepszy wynik na basenie 50m</string>
    <string name="mvr">Najwartościowsze wyniki</string>
    <string name="medal_statistics">Statystyka medalowa</string>
    <string name="apusart">Apusart</string>
    <string name="last_results">Ostatnie konkurencje</string>
    <string name="last_results_caps">OSTATNIE KONKURENCJE</string>
    <string name="meet_header">%1$s (%2$s)</string>
    <string name="distance">%1$sm</string>
    <string name="concurence">%1$sm %2$s (%3$s)</string>
    <string name="concurence_no_course">%1$sm %2$s</string>
    <string name="no_incoming_meet">Nie zostałeś zgłoszony do żadnych nadchodzących zawodów</string>
    <string name="lap_text">%1$s</string>
    <string name="total_time">Całkowity czas</string>
    <string name="points">Punkty</string>
    <string name="split_times">Międzyczasy</string>
    <string name="best_time">Najlepszy czas</string>
    <string name="additional_info">Dodatkowe informacje</string>
    <string name="res_count">Ilość startów</string>
    <string name="city">Miasto</string>
    <string name="date">Data</string>
    <string name="dsq_count">Ilość dyskwalifikacji</string>
    <string name="entry_time">Zgłoszenie</string>
    <string name="actual_result">Aktualny wynik</string>
    <string name="place">%1$s.</string>
    <string name="settings">Ustawienia</string>
    <string name="meeting_date">%1$s - %2$s</string>
    <string name="club_record">RK - %1$s lat</string>
    <string name="no_last_meet">Brak ostatnich zawodów do wyświetlenia</string>
    <string name="incoming_meet_caps">NAJBLIŻSZE ZAWODY</string>
    <string name="last_meet_caps">OSTATNIE ZAWODY</string>
    <string name="share">Udostępnij</string>
    <string name="club_scope">Klub</string>
    <string-array name="course_array">
        <item>25m</item>
        <item>50m</item>
    </string-array>
    <string-array name="gender_array">
        <item>Kobiety</item>
        <item>Mężczyźni</item>
    </string-array>
    <string-array name="age_array">
        <item>10 lat i młodsi</item>
        <item>11 lat</item>
        <item>12 lat</item>
        <item>13 lat</item>
        <item>14 lat</item>
        <item>15 lat</item>
        <item>16 lat</item>
        <item>17 lat</item>
        <item>18 lat</item>
        <item>19 lat i starsi</item>
    </string-array>
</resources>