<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_competition"
        android:enabled="true"
        android:icon="@drawable/copetition_flag_icon"
        android:title="@string/competition"
        />
    <item
        android:id="@+id/navigation_articles"
        android:enabled="true"
        android:icon="@drawable/articles_icon"
        android:title="@string/articles"
        />
    <item
        android:id="@+id/navigation_records"
        android:enabled="true"
        android:icon="@drawable/records_icon"
        android:title="@string/records"
        />
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"
        />
</menu>