<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/list_item">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_comparison_item_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/result_comparison_item_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="50m dowolny"
                style="@style/Body2MenuRoboto14Pt"
                />

            <LinearLayout
                android:id="@+id/result_comparison_item_place_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                android:orientation="horizontal">
<!--                <TextView-->
<!--                    android:id="@+id/result_comparison_item_progress_value"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    android:layout_gravity="center"-->
<!--                    tools:text="-21.42%"-->
<!--                    style="@style/CaptionRoboto12Pt"-->
<!--                    android:layout_marginEnd="5dp"-->
<!--                    />-->

                <ImageView
                    android:id="@+id/medalIcon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    tools:src="@drawable/medal_bronze_icon32"
                    android:layout_marginHorizontal="4dp"
                    android:visibility="visible"/>
                <TextView
                    android:id="@+id/place"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:text="4."
                    style="@style/Roboto14Pt"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/result_comparison_item_actual_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/result_comparison_item_actual_points"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="5dp"
                style="@style/Body2MenuRoboto14Pt"
                tools:text="01:04.12"/>
            <TextView
                android:id="@+id/result_comparison_item_actual_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                style="@style/CaptionRoboto12Pt"
                tools:text="765"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_comparison_item_additional_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/result_comparison_item_header_container">
            <LinearLayout
                android:id="@+id/result_comparison_item_split_times_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/split_times"
                    style="@style/CaptionRoboto12Pt"
                    />
                <TextView
                    android:id="@+id/result_comparison_item_additional_info_split_times"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="29.47 34.19"
                    style="@style/Roboto14Pt"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_comparison_item_before_info"
            app:layout_constraintTop_toBottomOf="@id/result_comparison_item_additional_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/result_comparison_item_entry_time_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/result_comparison_item_prev_best_time_container"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/result_comparison_item_header"
                    style="@style/CaptionRoboto12Pt"
                    android:text="@string/entry_time"/>
                <TextView
                    android:id="@+id/result_comparison_item_entry_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="01:08.22"
                    style="@style/Roboto14Pt"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/result_comparison_item_prev_best_time_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/result_comparison_item_entry_time_container"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CaptionRoboto12Pt"
                    android:text="@string/best_time"/>
                <TextView
                    android:id="@+id/result_comparison_item_best_prev_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="01:06.22"
                    style="@style/Roboto14Pt"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>